force-app/main/default/objects/Screening_Rule__c/Screening_Rule__c.object-meta.xml
<CustomObject>
    <label>Screening Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screening Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>