force-app/main/default/objects/Screening_Rule__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AutoReject</fullName>
            </value>
            <value>
                <fullName>FlagForReview</fullName>
            </value>
            <value>
                <fullName>RouteToJurisdiction</fullName>
            </value>
            <value>
                <fullName>CreateTask</fullName>
            </value>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>RequestDocuments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>