force-app/main/default/objects/Screening_Rule__c/fields/Allow_Manual_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Manual_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow_Manual_Override</label>
    <type>Checkbox</type>
</CustomField>