force-app/main/default/objects/Screening_Rule__c/fields/Applied_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Applied_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Screening Rules</relationshipLabel>
    <relationshipName>Screening_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>