force-app/main/default/objects/Screening_Rule__c/fields/Applied_Role__c.field-meta.xml
<CustomField>
    <fullName>Applied_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied_Role</label>
    <referenceTo>Job_Posting__c</referenceTo>
    <relationshipLabel>Screening Rules</relationshipLabel>
    <relationshipName>Screening_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>