force-app/main/default/objects/Screening_Rule__c/fields/Auto_Route__c.field-meta.xml
<CustomField>
    <fullName>Auto_Route__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto_Route</label>
    <type>Checkbox</type>
</CustomField>