force-app/main/default/objects/Screening_Rule__c/fields/Condition_Expression__c.field-meta.xml
<CustomField>
    <fullName>Condition_Expression__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition_Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>