force-app/main/default/objects/Screening_Rule__c/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition_Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>