force-app/main/default/objects/Screening_Rule__c/fields/Created_From_Template__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created_From_Template</label>
    <type>Checkbox</type>
</CustomField>