force-app/main/default/objects/Screening_Rule__c/fields/Dependent_Rules__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Rules__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dependent_Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>