force-app/main/default/objects/Screening_Rule__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation_Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>