force-app/main/default/objects/Screening_Rule__c/fields/Escalation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalation_Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Screening_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>