force-app/main/default/objects/Screening_Rule__c/fields/Execution_Count__c.field-meta.xml
<CustomField>
    <fullName>Execution_Count__c</fullName>
    <label>Execution_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>