force-app/main/default/objects/Screening_Rule__c/fields/Fail_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fail_Rate__c</fullName>
    <label>Fail_Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>