force-app/main/default/objects/Screening_Rule__c/fields/Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>Failure_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failure Message</label>
    <type>TextArea</type>
</CustomField>