force-app/main/default/objects/Screening_Rule__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>