force-app/main/default/objects/Screening_Rule__c/fields/Is_Test_Rule__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Test_Rule</label>
    <type>Checkbox</type>
</CustomField>