force-app/main/default/objects/Screening_Rule__c/fields/Journey_Path__c.field-meta.xml
<CustomField>
    <fullName>Journey_Path__c</fullName>
    <label>Journey_Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor Path</fullName>
            </value>
            <value>
                <fullName>Nurse Path</fullName>
            </value>
            <value>
                <fullName>Admin Path</fullName>
            </value>
            <value>
                <fullName>Tech Path</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>