force-app/main/default/objects/Screening_Rule__c/fields/Last_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last_Execution_Date</label>
    <type>DateTime</type>
</CustomField>