force-app/main/default/objects/Screening_Rule__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>