force-app/main/default/objects/Screening_Rule__c/fields/Override_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Override_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override_Approval_Required</label>
    <type>Checkbox</type>
</CustomField>