force-app/main/default/objects/Screening_Rule__c/fields/Override_Approver__c.field-meta.xml
<CustomField>
    <fullName>Override_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override_Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Screening_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>