force-app/main/default/objects/Screening_Rule__c/fields/Override_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Override_Approver_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Approver Email</label>
    <type>Email</type>
</CustomField>