force-app/main/default/objects/Screening_Rule__c/fields/Override_Reason_Required__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Override_Reason_Required</label>
    <type>Checkbox</type>
</CustomField>