force-app/main/default/objects/Screening_Rule__c/fields/Parent_Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Parent_Rule_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent_Rule_Version</label>
    <referenceTo>Screening_Rule__c</referenceTo>
    <relationshipLabel>Screening Rules</relationshipLabel>
    <relationshipName>Screening_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>