force-app/main/default/objects/Screening_Rule__c/fields/Route_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Route_To_Queue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Route_To_Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>