force-app/main/default/objects/Screening_Rule__c/fields/Rule_Category__c.field-meta.xml
<CustomField>
    <fullName>Rule_Category__c</fullName>
    <label>Rule_Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>