force-app/main/default/objects/Screening_Rule__c/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rule_Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>