force-app/main/default/objects/Screening_Rule__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schema_Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>