force-app/main/default/objects/Screening_Rule__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>