force-app/main/default/objects/Screening_Rule__c/fields/Test_Mode_Only__c.field-meta.xml
<CustomField>
    <fullName>Test_Mode_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test_Mode_Only</label>
    <type>Checkbox</type>
</CustomField>