force-app/main/default/objects/Screening_Rule__c/fields/Test_Pass_Count__c.field-meta.xml
<CustomField>
    <fullName>Test_Pass_Count__c</fullName>
    <label>Test_Pass_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>