force-app/main/default/objects/Screening_Rule__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test_Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>