force-app/main/default/objects/Screening_Rule__c/fields/Version_Notes__c.field-meta.xml
<CustomField>
    <fullName>Version_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Version_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>