force-app/main/default/objects/Screening_Rule__c/validationRules/Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
     ISBLANK(TEXT(Priority__c)),
     ISBLANK(Applied_Role__c),
     ISBLANK(Target_Object__c),
     ISBLANK(Field_API_Name__c)
   )</errorConditionFormula>
    <errorMessage>Priority, Applied Role, Target Object, and Field are required</errorMessage>
</ValidationRule>