force-app/main/default/objects/Screening_Rule__c/validationRules/Test_Rule_Cannot_Be_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Rule_Cannot_Be_Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Test_Mode_Only__c = TRUE, Active__c = TRUE)</errorConditionFormula>
    <errorMessage>Test-only rules cannot be active in production</errorMessage>
</ValidationRule>