force-app/main/default/objects/Screening_Rule__c/validationRules/Valid_Escalation_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Escalation_Level</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT(ISBLANK(Escalation_Level__c)),
     OR(Escalation_Level__c &lt; 1, Escalation_Level__c &gt; 5)
   )</errorConditionFormula>
    <errorMessage>Escalation Level must be between 1 and 5</errorMessage>
</ValidationRule>