force-app/main/default/objects/Screening_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applied_Role__c</columns>
    <columns>Applied_Candidate__c</columns>
    <columns>Condition_Expression__c</columns>
    <columns>Auto_Route__c</columns>
    <columns>Condition_Logic__c</columns>
    <columns>Expected_Value__c</columns>
    <columns>Test_Pass_Count__c</columns>
    <columns>Version_Notes__c</columns>
    <columns>Operator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>